Contact forms: Fix validation icon alignment
Fixes #298

--- a/themes/wporg-5ftf-2024/src/style/style.scss
+++ b/themes/wporg-5ftf-2024/src/style/style.scss
@@ -35,6 +35,13 @@ body.is-page-in-menu .wp-block-wporg-local-navigation-bar .wp-block-post-title {
 	display: none;
 }
 
+/* Fix the error icons on Jetpack contact forms. */
+.contact-form__warning-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 /* Style the group blocks inside a template list. */
 .wp-block-wporg-my-pledge-list .my-pledges__list,
 .wp-block-post:where(li.type-5ftf_pledge) {
